# Amrvis2

./: .gitignore  CMakeLists.txt  CMakePresets.json  INSTALL.md  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
cmake/: amrexplorer_sanitizers.cmake  amrexplorer_warnings.cmake
docs/: building.md  derived-expression-parser-design.md  remote-client-server-plan.md  user-guide.md
include/amrexplorer/cache/: BlockKey.hpp  ByteLruCache.hpp
include/amrexplorer/core/: Metadata.hpp  Request.hpp  Result.hpp  Statistics.hpp  StopToken.hpp
include/amrexplorer/io/: FabCatalog.hpp  PlotfileBlockReader.hpp  PlotfileDataset.hpp  PlotfileMetadataReader.hpp  StandaloneMetadataReader.hpp
include/amrexplorer/io/detail/: VisMfIndex.hpp
include/amrexplorer/query/: LineQuery.hpp  SliceQuery.hpp
include/amrexplorer/render2d/: Contours.hpp  Palette.hpp  ScalarRenderer.hpp  VectorGlyphs.hpp
include/amrvis/cache/: ByteLruCache.hpp
include/amrvis/core/: Geometry.hpp  Request.hpp  Result.hpp
include/amrvis/io/: ParticleReader.hpp  PlotfileDataset.hpp
include/amrvis/query/: LineQuery.hpp
include/amrvis/render2d/: Contours.hpp  Palette.hpp  ScalarRenderer.hpp  VectorGlyphs.hpp
palettes/: blackbody.pal  coolwarm.pal  parula.pal  plasma.pal  turbo.pal  viridis.pal
prototypes/flatbuffers_wire/: CMakeLists.txt  Frame.cpp  Frame.hpp  NOTES.md  README.md  amrvis_wire.fbs  client.cpp  run_demo.sh  server.cpp
resources/: amrexplorer.desktop  amrexplorer.icns  amrexplorer.qrc  amrvis2.qrc  generate_logo.py  generate_palettes.py  install-desktop-entry.sh
src/cache/: CMakeLists.txt  CacheMetrics.cpp
src/core/: CMakeLists.txt  Metadata.cpp  Request.cpp  Statistics.cpp
src/expression/: Expression.cpp
src/io/: CMakeLists.txt
src/io/plotfile/: FabCatalog.cpp  ParticleReader.cpp  PlotfileBlockReader.cpp  PlotfileDataset.cpp  PlotfileMetadataReader.cpp  StandaloneMetadataReader.cpp
src/qt/: AnimationPanel.cpp  AnimationPanel.hpp  CMakeLists.txt  CacheConfig.hpp  ColorBarWidget.cpp  ColorBarWidget.hpp  DatasetExtract.hpp  DatasetWindow.cpp  DatasetWindow.hpp  FabSelectorDock.hpp  ImageView.cpp  ImageView.hpp  IsoWidget.cpp  IsoWidget.hpp  LinePlotRequest.hpp  LinePlotWindow.cpp  LinePlotWindow.hpp  MainWindow.cpp  MainWindow.hpp  NumberFormat.cpp  NumberFormat.hpp  SetContoursDialog.cpp  SetContoursDialog.hpp  Theme.hpp  UserGuideDialog.cpp  main.cpp
src/query/: CMakeLists.txt  LineQuery.cpp  SliceQuery.cpp
src/render2d/: BuiltinPalettes.cpp  CMakeLists.txt  Contours.cpp  ImageBuffer.cpp  Palette.cpp  ScalarRenderer.cpp  VectorGlyphs.cpp
tests/: CMakeLists.txt  qt_smoke_driver.cmake
tests/fixture_materializer/: main.cpp
tests/integration/: test_fab_catalog.cpp  test_line_query.cpp  test_plotfile_metadata.cpp  test_selective_block_read.cpp  test_single_precision_plotfile.cpp  test_slice_query.cpp
tests/unit/: test_byte_lru_cache.cpp  test_cache_config.cpp  test_contours.cpp  test_core_metadata.cpp  test_expression.cpp  test_geometry.cpp  test_palette.cpp  test_scalar_renderer.cpp  test_stop_token.cpp  test_user_guide_dialog.cpp  test_vector_glyphs.cpp  test_vismf_index.cpp
tools/dataset_inspect/: CMakeLists.txt  main.cpp
tools/line_repro/: CMakeLists.txt  main.cpp
tools/query_benchmark/: CMakeLists.txt  main.cpp
